options reader and server new route
